Fixed home summary & planning layout issues.

--- a/src/components/shared/container/Container.css
+++ b/src/components/shared/container/Container.css
@@ -32,3 +32,11 @@
     overflow: auto;
   }
 }
+
+/* Up to: Tablets (landscape) */
+@media (max-width: 1023px) {
+  .container-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+}
