--- a/src/views/app/home/Home.css
+++ b/src/views/app/home/Home.css
@@ -18,9 +18,7 @@
 
 .home-view .banner__background {
   width: 100%;
-  height: auto;
-  min-height: 9rem;
-  max-height: 12rem;
+  height: 9rem;
   object-fit: cover;
   filter: blur(1px);
   border-radius: var(--radius-medium);
@@ -36,6 +34,10 @@
 }
 
 .home-view .banner__logo {
+  top: 0;
+  left: 0;
+  height: 9rem;
+  position: absolute;
   align-self: stretch;
 }
 
@@ -100,12 +102,6 @@
   grid-template: auto / 1fr 1fr;
 }
 
-.home-view .bottom-grid > .planning-grades {
-  gap: 1rem;
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-}
-
 /* For other users than students */
 .home-view .bottom-grid.no-credits {
   grid-auto-flow: row;
@@ -160,6 +156,15 @@
 .home-view .credits #ects-legend > li > div {
   width: 3rem;
   height: 1rem;
+}
+
+
+/* --- Planning + Grades layout --- */
+
+.home-view .planning-grades {
+  gap: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 
 
@@ -250,6 +255,11 @@
 
 /* Up to: Laptops */
 @media (max-width: 1279px) {
+  .home-view .credits #ects-legend {
+    padding-top: 1rem;
+    justify-content: center;
+  }
+
   .home-view .credits #ects-legend > li {
     gap: 0.25rem;
     flex-direction: column;
@@ -265,9 +275,9 @@
   }
 
   .home-view .bottom-grid {
-    flex-grow: unset;
-    grid-auto-flow: row;
-    grid-template: auto 1fr / auto;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
   }
 
   .home-view .credits #ects-pie {
@@ -280,17 +290,21 @@
   }
 }
 
-/* Up to: Smartphones */
-@media (max-width: 479px) {
+/* Up to: Large Smartphones */
+@media (max-width: 539px) {
   .home-view .banner__text {
     font-size: 1.5rem;
   }
 }
 
-/* Up to: Very Narrow Smartphones */
-@media (max-width: 360px) {
+/* Up to: Narrow Smartphones */
+@media (max-width: 419px) {
   .home-view .banner__text {
     max-width: 70%;
     font-size: 1.25rem;
+  }
+
+  .home-view .home-grades .grades__item__title {
+    display: none;
   }
 }
