--- a/src/views/app/planning/Planning.css
+++ b/src/views/app/planning/Planning.css
@@ -133,9 +133,6 @@
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  /* display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical; */
 }
 
 .planning-view .details__item > .course-color-course::before {
@@ -215,9 +212,9 @@
 /* Up to: Tablets (landscape) */
 @media (max-width: 1023px) {
   .planning-view .content__body {
+    display: flex;
     flex-grow: unset;
-    grid-auto-flow: row;
-    grid-template: auto 1fr / auto;
+    flex-direction: column;
   }
 
   #hide-calendar-btn {
@@ -233,5 +230,12 @@
 @media (min-width: 1024px) {
   .planning-view .MuiCalendarPicker-root {
     min-width: var(--max-calendar-picker-width);
+  }
+}
+
+/* Up to: Narrow Smartphones */
+@media (max-width: 419px) {
+  .planning-view .details__item__title > span {
+    display: none;
   }
 }
